plugins {
    id 'application'
}
application {
    mainClass = 'me.chester.minitruco.server.MiniTrucoServer'
}

dependencies {
    implementation project(':core')
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

tasks.jar {
    manifest.attributes["Main-Class"] = "me.chester.minitruco.server.MiniTrucoServer"
    from(project(':core').fileTree("build/classes/java/main")) {
        include '**/*.class'
    }
}